# artefacts_interbotix_movit2

./: .gitignore  .gitmodules  Dockerfile  README.md  artefacts.yaml
src/: collision_test.py
src/artefacts_demo_control/: example.sdf  package.xml  setup.cfg  setup.py  world_cube.sdf
src/artefacts_demo_control/artefacts_demo_control/: collision_test.py  gripper_control.py  interbotix_moveit_control_node.py  joint_goal.py  pose_goal.py  push_object.py  wx200.py
src/artefacts_demo_control/launch/: xsarm_moveit.launch.py
src/artefacts_demo_control/models/BatmanMug/: blenderkit_meta.json  demo.sdf  gltf-model.config  gltf-model.sdf  model.config  model.sdf
src/artefacts_demo_control/models/BatmanMug/assets/: visual.glb  visual.mtl
src/artefacts_demo_control/models/BeerBottleTemplate/: blenderkit_meta.json  demo.sdf  gltf-model.config  gltf-model.sdf  model.config  model.sdf
src/artefacts_demo_control/models/BeerBottleTemplate/assets/: visual.glb  visual.mtl
src/artefacts_demo_control/models/DeepBrownWoodenTray/: blenderkit_meta.json  demo.sdf  gltf-model.config  gltf-model.sdf  model.config  model.sdf
src/artefacts_demo_control/models/DeepBrownWoodenTray/assets/: visual.glb  visual.mtl
src/artefacts_demo_control/models/KitchenModularSet/: blenderkit_meta.json  demo.sdf  gltf-model.config  gltf-model.sdf  model.config  model.sdf
src/artefacts_demo_control/models/artefacts_box/: model.config  model.sdf
src/artefacts_demo_control/test/artefacts_demo_control/: collision_test.py
src/artefacts_demo_control/world/: artefacts_demo_world.sdf
(+1 files in other folders)
